--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -9,21 +9,22 @@
     <ImageView
         android:layout_width="@dimen/medium_img_size"
         android:layout_height="@dimen/medium_img_size"
-        android:src="@drawable/ic_coronavirus"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_coronavirus" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="VERSION :1.0.0"
         android:textColor="@color/white"
-        android:textSize="@dimen/small_txt_size"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="@dimen/small_txt_size" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:gravity="center"
         android:text="Coronavirus Pandemic App"
         android:textColor="@color/white"
         android:textSize="@dimen/small_txt_size"
@@ -33,17 +34,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
         android:text="The data in this app is taken from https://disease.sh/"
         android:textColor="@color/white"
-        android:textSize="@dimen/smallest_txt_size"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="@dimen/smallest_txt_size" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="Developed by Wai Yan Tun(wyh.waiyan98@mail.com)"
         android:textColor="@color/red"
-        android:gravity="center"
         android:textSize="@dimen/smallest_txt_size" />
 
 </LinearLayout>
